--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 		<meta name="twitter:site" content="">
 		<meta name="twitter:title" content="Mega303 : Situs Agen Judi Slot Online Gampang Menang 2022">
 		<meta name="twitter:description" content="Mega303 adalah situs agen judi slot online gampang menang 2022 terbaik dan terpercaya nomor 1 di Indonesia, bermain slot online di Mega303 dijamin jp!">
-		<link rel="canonical" href="google.com">
+		<link rel="canonical" href="https://mega303-link-alternative.vercel.app/">
+    <link rel="preload" href="https://sonicseo.b-cdn.net/assets/mega303/banner-mega303.webp" as="image">
 		<style amp-boilerplate>body{-webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;-moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;-ms-animation: -amp-start 8s steps(1, end) 0s 1 normal both;animation: -amp-start 8s steps(1, end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility: hidden}to{visibility: visible}}@-moz-keyframes -amp-start{from{visibility: hidden}to{visibility: visible}}@-ms-keyframes -amp-start{from{visibility: hidden}to{visibility: visible}}@-o-keyframes -amp-start{from{visibility: hidden}to{visibility: visible}}@keyframes -amp-start{from{visibility: hidden}to{visibility: visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation: none;-moz-animation: none;-ms-animation: none;animation: none}</style></noscript>
 		<style amp-custom>
 			:root {--j-h1: calc(30px (38 - 30) * ((100vw - 360px) / (1920 - 360)));--j-h2: calc(24px (32 - 24) * ((100vw - 360px) / (1920 - 360)));--j-h3: calc(20px (24 - 20) * ((100vw - 360px) / (1920 - 360)));--j-h4: calc(18px (20 - 18) * ((100vw - 360px) / (1920 - 360)));--j-h5: calc(16px (18 - 16) * ((100vw - 360px) / (1920 - 360)));--j-h6: calc(12px (16 - 12) * ((100vw - 360px) / (1920 - 360)));--j-primary: #282828;--j-secondary: #000000;--j-tertiary: #37054c;--j-card-hover: rgba(255, 255, 255, 0.15);--j-text: #d3d0b3;--j-link: rgba(255, 255, 255, 0.05);--j-gradient: linear-gradient( 85.53deg, #41547e 0.78%, #a25be9 48.84%, #634bf8 100% );--j-space: min(max(12px, 3.5vmin), 30px);--j-space-def: 20px;--j-space-s: min(max(8px, 2vmin), 20px);--j-space-xs: min(max(4px, 1vmin), 10px);--j-transition: 0.6s;--j-max-width: 1120px;--j-white: white;--j-radius: 8px;}body {background: linear-gradient(180deg, #580186 0, #580186 49%, #14001c);color: #ffffff;font-family: Inter, Arial, Helvetica, sans-serif;font-display: swap;line-height: 2.5;font-size: 15px;}html, body {max-width: 100%;overflow-x: hidden;}a {color: #0bb100;text-decoration: none;}hr {width: 100%;border-style: solid;border: 1px solid #858267;box-sizing: content-box;height: 0;}.j-header {height: 60px;position: relative;padding: var(--j-space-s) 0;transition: var(--j-transition);overflow: hidden;background: #1f002c;border-bottom: 1px solid #8217bb;}.j-head {max-width: var(--j-max-width);overflow: hidden;margin-left: auto;margin-right: auto;padding: var(--j-space-s) var(--j-space-def) var(--j-space-s) var(--j-space-def);position: relative;}.j-btn, .j-btn-main {padding: var(--j-space-s) var(--j-space) var(--j-space-s) var(--j-space);color: var(--j-white);text-decoration: none;font-weight: 700;border-radius: var(--j-radius);}.j-btn-head, .j-btn-main, .j-div-anime {background: linear-gradient(180deg, #333 0, #222 49%, #050505);background-size: 800% 400%;-webkit-animation: Jaguar 10s infinite cubic-bezier(0.62, 0.28, 0.23, 0.99) both;-moz-animation: Jaguar 10s infinite cubic-bezier(0.62, 0.28, 0.23, 0.99) both;animation: Jaguar 10s infinite cubic-bezier(0.62, 0.28, 0.23, 0.99) both;color: #fff;border-radius: 7px;}.j-div-anime {height: 1px;width: 100%;margin: var(--j-space-s) 0;}.j-section {width: 100%;}.j-inner-wrap {max-width: var(--j-max-width);margin-left: auto;margin-right: auto;height: 100%;padding: var(--j-space-s) var(--j-space-def) var(--j-space-s) var(--j-space-def);}.j-border-bottom {border-bottom: 1px solid #858267;padding-bottom: var(--j-space-s);width: 100%;}.j-columns-1 {display: grid;grid-template-columns: repeat(1, 1fr);width: 100%;}.j-columns-4 {display: grid;grid-template-columns: repeat(4, 1fr);width: 100%;}.j-sidebar {background: linear-gradient(180deg, #1f002c 0, #580186 49%, #1f002c);padding: var(--j-space);color: var(--j-white);width: 30vw;}.j-display {display: block;}.j-hide {display: none;}@media only screen and (max-width: 767px) {.j-sidebar {width: 60vw;}.j-columns-m-2 {grid-template-columns: repeat(2, 1fr);}.j-columns-m-1 {grid-template-columns: 1fr;}.j-header {padding: var(--j-space-s) var(--j-space-s);}.j-display-m {display: block;}.j-hide-m {display: none;}.j-head {padding: 0;}}.j-nav {font-size: var(--j-h3);display: flex;flex-direction: column;}.j-nav a {width: 100%;color: var(--j-white);}.j-columns-gap {grid-gap: var(--j-space-s);}.j-middle-center {text-align: center;flex-direction: column;align-items: center;align-content: center;justify-content: center;}.j-card {padding: var(--j-space-s);background: var(--j-tertiary);border-radius: var(--j-radius);border: 1px solid #858267;transition: var(--j-transition);color: var(--j-white);font-size: var(--j-h6);}.j-card p {font-weight: 600;margin: var(--j-space-xs);}h1 {font-size: var(--j-h1);text-align: center;}h2 {font-size: var(--j-h2);text-align: center;}h3 {font-size: var(--j-h3);text-align: center;}h4 {font-size: var(--j-h4);text-align: center;}.j-space-between {display: flex;flex-direction: row;justify-content: space-between;align-items: center;}.j-bottom-space {margin-bottom: var(--j-space);}.j-bottom-xs {margin-bottom: var(--j-space-xs);}.j-rounded {border-radius: var(--j-radius);}.j-title {font-size: var(--j-h4);font-weight: 700;color: var(--j-white);}.j-center {text-align: center;}.j-img {width: 100%;height: 100%;}.container {padding-right: 15px;padding-left: 15px;margin-top: 20px;margin-right: auto;margin-left: auto;}@media (min-width: 768px) {.container {max-width: 720px;}.tron-regis {margin: 0 10px 0 0;}.tron-login {margin: 10px 20px 10px 0;}}@media (min-width: 992px) {.container {max-width: 1120px;}.tron-regis {margin: 0 10px 0 0;}.tron-login {margin: 0 10px 0 0;}}@media (min-width: 1200px) {.container {width: 1120px;}.tron-regis {margin: 0 10px 0 0;}.tron-login {margin: 0 10px 0 0;}}img {width: 100%;height: auto;}.fs-16 {font-size: 16px;}.regis-button {display: grid;grid-template-columns: repeat(2, 1fr);column-gap: 10px;margin-top: 20px;}.button-regis {width: 100%;font-size: 21px;letter-spacing: 1px;padding: 18px 22px;color: #fff;display: inline-block;padding: 14px 15px;cursor: pointer;line-height: 1;font-weight: 700;text-transform: uppercase;text-align: center;background: linear-gradient(180deg, #fed569, #b97d00);border-radius: 6px;box-sizing: border-box;text-shadow: 0 1px 3px rgba(0, 0, 0, 0.75);box-shadow: -5px 5px 10px #191919, 5px -5px 10px #292929;transition: color 0.2s;}.button-regis:hover {background: #37054c;color: #c968fc;}
@@ -39,7 +40,7 @@
 		<header class="j-header">
 			<div class="j-head">
 				<div class="j-space-between">
-					<a href="google.com" target="_blank" title="Situs Slot Online Terbaik">
+					<a href="https://mega303-link-alternative.vercel.app/" target="_blank" title="Situs Slot Online Terbaik">
 						<amp-img src="https://sonicseo.b-cdn.net/assets/mega303/logo-mega303.webp" alt="logo" layout="fixed" width="147" height="54"></amp-img>
 					</a>
 					<amp-sidebar id="sidebar-right" class="j-sidebar" layout="nodisplay" side="right" tabindex="-1" role="menu">
@@ -48,7 +49,7 @@
 						</div>
 						<nav class="j-nav">
 							<amp-img src="https://sonicseo.b-cdn.net/assets/mega303/logo-mega303.webp" alt="Logo Mega303" layout="responsive" width="160" height="54"></amp-img><br>
-							<a href="google.com" target="_blank" title="Home" class="j-border-bottom j-bottom-xs fs-16">Home</a>
+							<a href="https://mega303-link-alternative.vercel.app/" target="_blank" title="Home" class="j-border-bottom j-bottom-xs fs-16">Home</a>
 							<a href="https://yuk.bio/link-mega303" target="_blank" title="Login Mega303" class="j-border-bottom j-bottom-xs fs-16">Login</a>
 							<a href="https://yuk.bio/link-mega303" target="_blank" title="Daftar Akun Mega303" class="j-border-bottom j-bottom-xs fs-16">Daftar</a>
 							<a href="https://direct.lc.chat/10820522/" target="_blank" title="LiveChat Mega303" class="j-border-bottom j-bottom-xs fs-16">Livechat</a>
@@ -126,7 +127,7 @@
 			<div class="j-inner-wrap">
 				<h1>Mega303 : Situs Agen Judi Slot Online Gampang Menang 2022</h1>
 
-        <p>Mega303 adalah situs agen judi slot online terpercaya di Indonesia yang memberikan kenyamanan dan keamanan dalam bermain. Mega303 menyediakan berbagai jenis permainan judi slot online yang menguntungkan dan mudah dimainkan seperti pragmatic play, Habanero, dan Spadegaming.</p>
+        <p><a href="https://mega303-link-alternative.vercel.app/">Mega303</a> adalah situs agen judi slot online terpercaya di Indonesia yang memberikan kenyamanan dan keamanan dalam bermain. Mega303 menyediakan berbagai jenis permainan judi slot online yang menguntungkan dan mudah dimainkan seperti pragmatic play, Habanero, dan Spadegaming.</p>
 
         <p>Dalam era digital ini, semua sudah serba online termasuk judi. Judi di era contemporary ini berbeda dengan judi dulu yang harus offline dan mengantre. Sekarang, Anda bisa main judi secara online dimana saja dan kapan saja. Selain itu, jenis permainan judi slot online gampang menang pun beragam sehingga membuat Anda lebih tertarik untuk mencobanya.</p>
 
@@ -136,7 +137,7 @@
 
         <h2>Daftar Judi Slot Online Gampang Menang Yang Ada di Mega303</h2>
 
-        <p>Kami tersedia banyak pilihan provider yang menghadirkan permainan taruhan judi slot online terkemuka saat ini. Akan tetapi dari seluruh pilihan yang ada, kita hanya perlu memilih di satu pilihan yang terbaik saja. Pilihan itu pastinya banyak dimainkan oleh para Player ternama Indonesia yang ramai sekali. Maka di antaranya kami hanya merekomendasikan pilihan yang memang memiliki banyak keunggulan. Berikut salah satu beberapa diantaranya:</p>
+        <p>Kami tersedia banyak pilihan provider yang menghadirkan permainan taruhan judi <a href="https://mega303-link-alternative.vercel.app/">slot online</a> terkemuka saat ini. Akan tetapi dari seluruh pilihan yang ada, kita hanya perlu memilih di satu pilihan yang terbaik saja. Pilihan itu pastinya banyak dimainkan oleh para Player ternama Indonesia yang ramai sekali. Maka di antaranya kami hanya merekomendasikan pilihan yang memang memiliki banyak keunggulan. Berikut salah satu beberapa diantaranya:</p>
 
         <p><strong>Slot Online Gampang Menang Pragmatic Play</strong></p>
 
@@ -220,7 +221,7 @@
 
         <p><strong>Slot Online Gampang Menang AdvantPlay</strong></p>
 
-        <p>Situs judi online advantplay muncul dengan beragam solusi bagi anda yang saat ini telah bingung mencari slot online gacor yang tepat. Advantplay slot berikan kemurah hatian karena telah berpengalaman dalam memberikan pelayanan premium untuk para slotter. Walaupun masih terbilang situs judi slot online terbaru karena baru berdiri di tahun 2020. Namun untuk kualitas dari provider judi slot ini tidak perlu diragukan, karena memberikan pesona terbaik di game slot yang telah hadirkan nantinya. Bagi yang mencari slot rtp live tertinggi berkisaran dari 85% keatas maka kami menyarankan provider slot online jackpot terbesar AdvantPlay indonesia.</p>
+        <p>Situs <a href="https://mega303-link-alternative.vercel.app/">judi online</a> advantplay muncul dengan beragam solusi bagi anda yang saat ini telah bingung mencari slot online gacor yang tepat. Advantplay slot berikan kemurah hatian karena telah berpengalaman dalam memberikan pelayanan premium untuk para slotter. Walaupun masih terbilang situs judi slot online terbaru karena baru berdiri di tahun 2020. Namun untuk kualitas dari provider judi slot ini tidak perlu diragukan, karena memberikan pesona terbaik di game slot yang telah hadirkan nantinya. Bagi yang mencari slot rtp live tertinggi berkisaran dari 85% keatas maka kami menyarankan provider slot online jackpot terbesar AdvantPlay indonesia.</p>
 
         <p><strong>Slot Online Gampang Menang Live22</strong></p>
 
@@ -232,7 +233,7 @@
 
         <p>Ada berbagai alternatif permainan judi online selain slot di Mega303. Anda bisa memilih untuk bermain poker, blackjack, roulette, atau bahkan bola tangkas jika anda tertarik. Selain itu, ada juga berbagai macam permainan kasino lainnya yang tersedia untuk dimainkan. Jadi, jika anda bosan dengan bermain slot, cobalah untuk mencoba permainan lain di Mega303.</p>
 
-        <p>Mega303 adalah situs agen judi slot online gampang menang. Kami menyediakan berbagai permainan judi online terbaik dan terlengkap untuk para pemain judi online di Indonesia.<br />
+        <p>Mega303 adalah situs agen judi <a href="https://mega303-link-alternative.vercel.app/">slot online gampang menang</a>. Kami menyediakan berbagai permainan judi online terbaik dan terlengkap untuk para pemain judi online di Indonesia.<br />
         Kami menyediakan berbagai permainan judi online dari berbagai agen judi online terbaik di dunia. Kami hanya bekerja sama dengan agen judi online yang memiliki reputasi baik dan telah mendapatkan lisensi untuk menjadi situs agen judi online resmi di Indonesia.</p>
 
         <p>Di Mega303, anda akan diberikan keleluasaan untuk memilih apa saja permainan yang ingin anda mainkan. Anda juga bisa memilih untuk bermain secara gratis atau dengan uang asli sesuai keinginan anda.</p>
@@ -243,7 +244,7 @@
 
         <h4>Fitur Livechat Mega303 Online 24 Jam Full Nonstop Pelayanan Customer Terbaik Yang Pernah Ada</h4>
 
-        <p>Slot online Mega303 adalah situs agen judi slot online terbaik yang pernah ada. Selain menyediakan beragam jenis permainan slot, Mega303 juga memberikan pelayanan customer 24 jam nonstop. Fitur livechat Mega303 siap melayani Anda kapanpun dan dimanapun.</p>
+        <p>Slot online Mega303 adalah situs agen judi <a href="https://mega303-link-alternative.vercel.app/">slot online terbaik</a> yang pernah ada. Selain menyediakan beragam jenis permainan slot, Mega303 juga memberikan pelayanan customer 24 jam nonstop. Fitur livechat Mega303 siap melayani Anda kapanpun dan dimanapun.</p>
 
         <p>Berikut ini adalah beberapa fitur utama dari Livechat Mega303 Online 24 Jam Full Nonstop yang membuatnya sebagai pelayanan customer terbaik yang pernah ada:</p>
 
@@ -269,7 +270,7 @@
 		<footer>
 			<section class="j-section">
 				<div class="j-inner-wrap">
-					<p style="width:100%" class="j-center"><a href="google.com" target="_blank" title=>Mega303</a>&copy; Copyright 2022. All Right Reserved.</p>
+					<p style="width:100%" class="j-center"><a href="https://mega303-link-alternative.vercel.app/" target="_blank" title=>Mega303</a>&copy; Copyright 2022. All Right Reserved.</p>
 				</div>
 			</section>
 		</footer>
